@@ -1,6 +1,6 @@
-[B]Retrospect v5.7.xx Changelog - 2025-xx-xx[/B]
+[B]Retrospect v5.7.32 - Changelog - 2025-11-04[/B]
 
-t.b.d.
+Fixed some Swedish channel-related issues.
 
 [B]Framework related[/B]
 _None_
@@ -10,3 +10,5 @@ _None_
 
 [B]Channel related[/B]
 * Fixed: UR Play video playback.
+* Fixed: UR Play search.
+* Fixed: Log-in issue for TV4play.se (Fixes 1922).
